--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .DS_Store
 Pods/*
-Headshot-ios.xcodeproj/project.xcworkspace/*
-Headshot-ios.xcodeproj/xcuserdata/*
-Headshot-ios.xcworkspace/xcuserdata/*
-Headshot-ios.xcworkspace/xcshareddata/Headshot-ios.xccheckout
+Badge-ios.xcodeproj/project.xcworkspace/*
+Badge-ios.xcodeproj/xcuserdata/*
+Badge-ios.xcworkspace/xcuserdata/*
+Badge-ios.xcworkspace/xcshareddata/Headshot-ios.xccheckout
